[package]
name = "ecs_helpers"
description = "A tool for managing the deployment process of an application in Amazon Elastic Container Service (ECS)"
license = "MIT"
authors = ["Vasiliy Kuzenkov <batbondik0@gmail.com>"]
keywords = ["AWS", "cli", "ECS"]
version = "0.0.4"
edition = "2024"
rust-version = "1.92.0"
build = "./build.rs"

[[bin]]
name = "ecs_helpers"
path = "src/main.rs"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.

[dependencies]
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-ecr = "1.104.0"
aws-sdk-ecrpublic = "1.94.0"
aws-sdk-ecs = "1.109.0"
aws-sdk-ssm = "1.101.0"
aws-smithy-runtime = { version = "1.9.6", features = ["test-util"] }
aws-smithy-types = { version = "1.3.5", features = ["test-util"] }
aws-smithy-runtime-api = { version = "1.9.3", features = ["test-util"] }
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
futures = "0.3.31"
git2 = "0.20.3"
http = "1.4.0"
log = "0.4.29"
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1.12.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
aws-sdk-sts = "1.95.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
assert_cmd = "2.1.1"
sealed_test = "1.1.0"

[build-dependencies]
clap = { version = "4.4.12", features = ["derive", "env"] }
clap_mangen = "0.2.31"
clap_complete = "4.5.62"
